# kfk

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md
src/: main.rs
src/cli/: args.rs  output.rs
src/client/: admin.rs  factory.rs  mod.rs  types.rs
src/commands/: config.rs  consume.rs  group.rs  mod.rs  node.rs  produce.rs  topic.rs
src/config/: loader.rs  mod.rs  model.rs
