[package]
name = "kfk"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka_client = { path = "../kafka_client" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
comfy-table = "7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
